objects/Common_Name__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Software__c</fullName>
        <label>Manufacturer (Software)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Manufacturer_Software</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Common_Name_Check__c</fullName>
        <label>Unique Common Name Check</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Common Name</label>
    <listViews>
        <fullName>Active_Common_Names</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer_Software__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Common Names</label>
    </listViews>
    <listViews>
        <fullName>All_Common_Names</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer_Software__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Common Names</label>
    </listViews>
    <nameField>
        <label>Common Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>